--- a/NJWeb/web/commons/navigation.xhtml
+++ b/NJWeb/web/commons/navigation.xhtml
@@ -34,35 +34,54 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-    <h:form styleClass="form-horizontal">
-        <p:dialog id="dlg-login" widgetVar="dlg-login" modal="true" resizable="false" width="400">
-            <div class="well">
-                <fieldset>
-                    <div class="form-group">
-                        <label for="username" class="col-lg-4 control-label">#{common['general.appweb.signin.user.label']}</label>
-                        <div class="col-lg-8">
-                            <p:inputText styleClass="form-control" id="username"
-                                         placeholder="#{common['general.appweb.signin.user.placeholder']}" 
-                                         value="#{logInOutBean.username}"/>
+    <h:form id="form-login" styleClass="form-horizontal">
+        <p:dialog id="dlg-login"
+                  widgetVar="dlg-login"
+                  modal="true"
+                  resizable="false"
+                  width="400">
+            <p:ajax event="close" resetValues="true" update="panel-login"/>
+            <p:panel id="panel-login">
+                <div class="well">
+                    <fieldset>
+                        <div class="form-group">
+                            <label for="username" class="col-lg-4 control-label">#{common['general.appweb.signin.user.label']}</label>
+                            <div class="col-lg-8">
+                                <p:inputText id="username"
+                                             styleClass="form-control"
+                                             placeholder="#{common['general.appweb.signin.user.placeholder']}"
+                                             required="true"
+                                             value="#{logInOutBean.username}"
+                                             validatorMessage="#{common['validacion.formato.email']}">
+                                    <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
+                                </p:inputText>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="password" class="col-lg-4 control-label">#{common['general.appweb.signin.password.label']}</label>
-                        <div class="col-lg-8">
-                            <p:password styleClass="form-control" id="password"
-                                        placeholder="#{common['general.appweb.signin.password.placeholder']}"
-                                        value="#{logInOutBean.password}"/>
+                        <div class="form-group">
+                            <label for="password" class="col-lg-4 control-label">#{common['general.appweb.signin.password.label']}</label>
+                            <div class="col-lg-8">
+                                <p:password id="password"
+                                            styleClass="form-control"
+                                            placeholder="#{common['general.appweb.signin.password.placeholder']}"
+                                            required="true"
+                                            value="#{logInOutBean.password}">
+                                    <f:validateLength minimum="3" maximum="15" />
+                                </p:password>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group text-center">
-                        <p:commandButton id="btn-login" styleClass="btn btn-default"
-                                         value="#{common['general.appweb.signin.btn']}"
-                                         action="#{logInOutBean.actionLoginUser}"/>
-                    </div>
-                    <p:messages autoUpdate="true" closable="true"/>
-                </fieldset>
-            </div>
-
+                        <div class="form-group text-center">
+                            <p:commandButton id="btn-login"
+                                             styleClass="btn btn-default"
+                                             value="#{common['general.appweb.signin.btn']}"
+                                             action="#{logInOutBean.actionLoginUser}"
+                                             update="panel-login">
+                                <p:resetInput target="@form" />
+                            </p:commandButton>
+                        </div>
+                        <p:messages autoUpdate="true" closable="true"/>
+                    </fieldset>
+                </div>
+            </p:panel>
         </p:dialog>
     </h:form>
 
