--- a/NJWeb/web/home.xhtml
+++ b/NJWeb/web/home.xhtml
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <f:view contentType="text/html">
         <h:head>
@@ -13,7 +12,7 @@
         <h:body id="main-body-home">
             <ui:include src="commons/navegation-user.xhtml"/>
             <ui:insert name="content">
-                <ui:include src="commons/default.xhtml"/>
+                
             </ui:insert>
             <ui:include src="commons/footer.xhtml"/>
         </h:body>
