- Acoplamiento Servidor TomEE (80%)

--- a/NJWeb/web/commons/header.xhtml
+++ b/NJWeb/web/commons/header.xhtml
@@ -18,6 +18,6 @@
         <script src="/go/to/js/jquery/jquery-2.1.4.js"></script> 
         <script src="/go/to/tools/frameworks/bootstrap/js/bootstrap.min.js"></script>
         <link rel="icon" type="image/ico" href="/go/to/img/logo-icon.png"/>
-        <title> #{common['header.general.appweb']} </title>
+        <title> #{msg['header.general.appweb']} </title>
     </f:facet>
 </ui:composition>
