--- a/NJWeb/web/commons/navegation-user.xhtml
+++ b/NJWeb/web/commons/navegation-user.xhtml
@@ -22,8 +22,22 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">                                
                     <ul class="nav navbar-nav">
-                        <p:treeNode 
-                        #{navigationBean.treeNavigation}
+                        <ui:repeat var="level1" value="#{navigationBean.treeNavigation.children}" >
+                            <ui:fragment rendered="#{level1.children != null}">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{level1.data.nameFunction}<span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <ui:repeat var="level2" value="#{level1.children}" >
+                                            <li>
+                                                <h:commandLink value="#{level2.data.nameFunction}" action="#{navigationBean.actionRedirect(level2.data)}"/>                  
+                                            </li>
+                                        </ui:repeat>
+                                    </ul>
+                                </li>
+                            </ui:fragment>
+                            <h:commandLink value="#{level1.data.nameFunction}" action="#{navigationBean.actionRedirect(level1.data)}" rendered="#{level1.children == null}"/>
+                        </ui:repeat>
+
                     </ul>
                     <ul class="nav navbar-nav navbar-right ">
                         <li>
