--- a/NJWeb/web/modules/board/score.xhtml
+++ b/NJWeb/web/modules/board/score.xhtml
@@ -19,50 +19,60 @@
 
         <div id="panelMyScoreContest" class="panel panel-default">
             <h:form id="formRemoteCommandMyScoreContest">
-                <p:messages id="msgs" autoUpdate="true" closable="true"/>
-                <p:remoteCommand id="remoteCommandRefreshBoardMyScoreContest" update="tableMyScoreContest" process="@this" name="refreshBoardNow"
+                <p:messages id="msgs"
+                            autoUpdate="true"
+                            closable="true"/>
+                
+                <p:remoteCommand id="remoteCommandRefreshBoardMyScoreContest"
+                                 update="tableMyScoreContest"
+                                 process="@this"
+                                 name="refreshBoardNow"
                                  actionListener="#{submitBean.actionAjaxRefreshBoard}" />
 
                 <!-- Table -->
-                <p:dataTable id="tableMyScoreContest" widgetVar="tableMyScoreContest" tableStyleClass="table table-striped table-hover"
+                <p:dataTable id="tableMyScoreContest"
+                             widgetVar="tableMyScoreContest"
+                             tableStyleClass="table table-striped table-hover"
                              rowStyleClass="#{s.statusSubmit eq 'ACCEPTED'?
                                               'success': (s.statusSubmit eq 'WRONG ANSWER'?
                                               'danger': (s.statusSubmit eq 'TIME LIMIT'?
                                               'warning': (s.statusSubmit eq 'RUNTIME ERROR'?
                                               'info': (s.statusSubmit eq 'COMPILATION ERROR'?
                                               'warning': null)))) }"
-                             value="#{submitBean.submitsAll}" var="s" >
+                             value="#{submitBean.submitsAll}"
+                             var="s"
+                             emptyMessage="#{msg['general.table.noinfo']}">
 
-                    <p:column headerText="Id Submit" width="80">
+                    <p:column headerText="#{msg['submit.label.idSubmit']}" width="80">
                         <h:outputText value="#{utilBean.formatIdSubmit(s.idSubmit)}" />
                     </p:column>
-                    <p:column headerText="Problem" width="200">
+                    <p:column headerText="#{msg['problem.label.nameProblem']}" width="200">
                         <h:commandLink value="#{utilBean.formatIdProblem(s.idProblem.idProblem)} - #{s.idProblem.nameProblem}" action="#{problemsBean.actionRedirectView}">
                             <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{s.idProblem.idProblem}" />
                         </h:commandLink>
                     </p:column>
-                    <p:column headerText="Account" width="120">
+                    <p:column headerText="#{msg['account.label.nameAccount']}" width="120">
                         <h:commandLink value="#{s.idAccount.nickname}" action="#{problemsBean.actionRedirectViewToProfile}">
                             <f:setPropertyActionListener target="#{problemsBean.accountView.idAccount}" value="#{s.idAccount.idAccount}" />
                         </h:commandLink>
                     </p:column>
-                    <p:column headerText="Status" styleClass="bold-font" width="150">
+                    <p:column headerText="#{msg['submit.label.nameStatus']}" styleClass="bold-font" width="150">
                         <h:outputText value="#{s.statusSubmit}" />
                     </p:column>
-                    <p:column headerText="Language" width="60">
+                    <p:column headerText="#{msg['submit.label.nameLanguag']}" width="60">
                         <h:outputText value="#{s.idLanguage.nameLanguage}" />
                     </p:column>
-                    <p:column headerText="Date Submit" width="120">
+                    <p:column headerText="#{msg['submit.label.dateSubmit']}" width="120">
                         <h:outputText value="#{s.dateSubmit}" >
                             <f:convertDateTime pattern="dd MMM yyyy - HH:mm:ss" />
                         </h:outputText>
                     </p:column>
-                    <p:column headerText="Date Judge" width="120">
+                    <p:column headerText="#{msg['submit.label.dateJudgement']}" width="120">
                         <h:outputText value="#{s.dateJudge}" >
                             <f:convertDateTime pattern="dd MMM yyyy - HH:mm:ss" />
                         </h:outputText>
                     </p:column>
-                    <p:column headerText="View" width="40">
+                    <p:column headerText="#{msg['general.label.view']}" width="40">
                         <p:commandLink styleClass="glyphicon glyphicon-paperclip"  oncomplete="PF('dlg-view-code').show();"
                                        action="#{problemsBean.actionViewCode(s.idSubmit)}" update=":form-dlg-view-code"/>
                     </p:column>
@@ -71,7 +81,7 @@
             <h:form id="form-dlg-view-code">
                 <p:dialog id="dlg-view-code" widgetVar="dlg-view-code" modal="true" resizable="false" width="90%" style="width: 90% !important;">
                     <div class="panel panel-default">
-                        <div class="panel-heading">Codigo Fuente</div>
+                        <div class="panel-heading">#{msg['general.label.codeSource']}</div>
                         <div class="panel-body" style="cursor: pointer !important;">
                             <p:inputTextarea id="text-area-view-code" value="#{problemsBean.textCode}" readonly="true"
                                              style="width: 90% !important; cursor: pointer !important;" />
