--- a/NJWeb/web/modules/board/score.xhtml
+++ b/NJWeb/web/modules/board/score.xhtml
@@ -18,11 +18,14 @@
         <script src="/go/to/tools/frameworks/codemirror/addon/search/search.js"/>
 
         <div id="panelMyScoreContest" class="panel panel-default">
+
+            <p:growl widgetVar="growl" showDetail="true" />
+
             <h:form id="formRemoteCommandMyScoreContest">
-                <p:messages id="msgs"
+                <p:messages id="messages"
                             autoUpdate="true"
                             closable="true"/>
-                
+
                 <p:remoteCommand id="remoteCommandRefreshBoardMyScoreContest"
                                  update="tableMyScoreContest"
                                  process="@this"
@@ -47,7 +50,7 @@
                         <h:outputText value="#{utilBean.formatIdSubmit(s.idSubmit)}" />
                     </p:column>
                     <p:column headerText="#{msg['problem.label.nameProblem']}" width="200">
-                        <h:commandLink value="#{utilBean.formatIdProblem(s.idProblem.idProblem)} - #{s.idProblem.nameProblem}" action="#{problemsBean.actionRedirectView}">
+                        <h:commandLink value="#{utilBean.formatIdProblem(s.idProblem.idProblem)} - #{s.idProblem.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
                             <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{s.idProblem.idProblem}" />
                         </h:commandLink>
                     </p:column>
@@ -78,12 +81,15 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
+
             <h:form id="form-dlg-view-code">
                 <p:dialog id="dlg-view-code" widgetVar="dlg-view-code" modal="true" resizable="false" width="90%" style="width: 90% !important;">
                     <div class="panel panel-default">
                         <div class="panel-heading">#{msg['general.label.codeSource']}</div>
                         <div class="panel-body" style="cursor: pointer !important;">
-                            <p:inputTextarea id="text-area-view-code" value="#{problemsBean.textCode}" readonly="true"
+                            <p:inputTextarea id="text-area-view-code"
+                                             value="#{problemsBean.textCode}"
+                                             readonly="true"
                                              style="width: 90% !important; cursor: pointer !important;" />
                         </div>
                     </div>
@@ -102,12 +108,26 @@
                 </script>
 
             </h:form>
+
         </div>
+
+        <p:socket onMessage="handleMessage" channel="/notify" />
+
         <script type="text/javascript">
-            setInterval(refreshBoardLastSubmit, 20000);
-            function refreshBoardLastSubmit() {
-                refreshBoardNow();
+            function handleMessage(facesmessage) {
+                facesmessage.severity = 'info';
+
+                PF('growl').show([facesmessage]);
             }
         </script>
+        <!--
+                <script type="text/javascript">
+                    setInterval(refreshBoardLastSubmit, 20000);
+                    function refreshBoardLastSubmit() {
+                        refreshBoardNow();
+                    }
+                </script>
+        -->
+
     </ui:define>
 </ui:composition>
