--- a/NJWeb/web/modules/content/problem/search.xhtml
+++ b/NJWeb/web/modules/content/problem/search.xhtml
@@ -6,14 +6,32 @@
     xmlns:p="http://primefaces.org/ui"
     template="/home.xhtml">
 
+
+    <ui:define name="metadata">
+        <f:metadata>
+            <f:viewParam name="idProblem"
+                         value="#{problemsBean.problemView.idProblem}"/>
+        </f:metadata>
+    </ui:define>
+
     <ui:define name="content">
+
         <div class="well">
             <fieldset>
                 <div class="form-group">
                     <h:form id="formProblemsAll" class="form-horizontal">
                         <p:messages id="msgs" autoUpdate="true" closable="true"/>
-                        <p:dataTable id="tableMyProblemsContest" var="p" widgetVar="coWidgetVar" tableStyleClass="table table-striped table-hover" value="#{problemsBean.listProblems}" styleClass="center-block"
-                                     filteredValue="#{problemsBean.filteredProblems}" rowKey="#{p.idProblem}" paginator="true" paginatorPosition="bottom" >
+                        <p:dataTable id="tableMyProblemsContest"
+                                     var="p"
+                                     widgetVar="coWidgetVar"
+                                     tableStyleClass="table table-striped table-hover"
+                                     value="#{problemsBean.listProblems}"
+                                     styleClass="center-block"
+                                     filteredValue="#{problemsBean.filteredProblems}"
+                                     rowKey="#{p.idProblem}"
+                                     paginator="true"
+                                     paginatorPosition="bottom"
+                                     emptyMessage="#{msg['general.table.noinfo']}">
                             <f:facet name="header">
                                 <p:outputPanel>
                                     <div class="form-group">
@@ -30,7 +48,7 @@
                                 <h:outputText value="#{utilBean.formatIdProblem(p.idProblem)}" />
                             </p:column>
                             <p:column headerText="Problem" width="220">
-                                <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectView}">
+                                <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
                                     <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{p.idProblem}" />
                                 </h:commandLink>
                             </p:column>
