--- a/NJWeb/web/modules/content/problem/view-problem.xhtml
+++ b/NJWeb/web/modules/content/problem/view-problem.xhtml
@@ -8,6 +8,17 @@
     template="/home.xhtml"
     xmlns:c="http://java.sun.com/jsp/jstl/core">
 
+
+    <ui:define name="metadata">
+        <f:metadata>
+            <f:viewParam name="idProblem"
+                         value="#{problemsBean.problemView.idProblem}"
+                         required="true"/>
+            <f:event type="preRenderView"
+                     listener="#{problemsBean.actionPreRenderViewToSubmitProblem}" />
+        </f:metadata>
+    </ui:define>
+
     <ui:define name="content">
 
         <ui:fragment rendered="#{problemsBean.problemView.idProblem != 0}">
@@ -18,7 +29,9 @@
                 <div class="panel-body">
                     <div class="form-group">
                         <h:form rendered="#{problemsBean.pathSourceProblem != null}">
-                            <p:messages id="msgs" />
+                            <p:messages id="messages"
+                                        autoUpdate="true"
+                                        closable="true"/>
                             <iframe src="#{problemsBean.pathSourceProblem}" style="width: 100%;" height="600" ></iframe>
                             <p:spacer/>
                         </h:form>
