--- a/NJWeb/web/modules/practice/contest/create.xhtml
+++ b/NJWeb/web/modules/practice/contest/create.xhtml
@@ -104,7 +104,7 @@
                                     <h:outputText value="#{utilBean.formatIdProblem(p.idProblem)}" />
                                 </p:column>
                                 <p:column headerText="Problem" width="200" sortBy="#{p.nameProblem}">
-                                    <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectView}">
+                                    <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
                                         <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{p.idProblem}" />
                                     </h:commandLink>
                                 </p:column>
