--- a/NJWeb/web/modules/practice/contest/search.xhtml
+++ b/NJWeb/web/modules/practice/contest/search.xhtml
@@ -40,7 +40,7 @@
                                 <h:outputText value="#{utilBean.formatIdProblem(p.idProblem)}" />
                             </p:column>
                             <p:column headerText="#{msg['problem.label.nameProblem']}" width="200">
-                                <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectView}">
+                                <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
                                     <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{p.idProblem}" />
                                 </h:commandLink>
                             </p:column>
