--- a/NJWeb/web/modules/board/score.xhtml
+++ b/NJWeb/web/modules/board/score.xhtml
@@ -26,14 +26,7 @@
                             autoUpdate="true"
                             closable="true"/>
 
-                <p:remoteCommand id="remoteCommandRefreshBoardMyScoreContest"
-                                 update="tableMyScoreContest"
-                                 process="@this"
-                                 name="refreshBoardNow"
-                                 actionListener="#{submitBean.actionAjaxRefreshBoard}" />
-
-                <!-- Table -->
-                <p:dataTable id="tableMyScoreContest"
+                <p:dataTable id="table-submit-live"
                              widgetVar="tableMyScoreContest"
                              tableStyleClass="table table-striped table-hover"
                              rowStyleClass="#{s.statusSubmit eq 'ACCEPTED'?
@@ -50,20 +43,20 @@
                         <h:outputText value="#{utilBean.formatIdSubmit(s.idSubmit)}" />
                     </p:column>
                     <p:column headerText="#{msg['problem.label.nameProblem']}" width="200">
-                        <h:commandLink value="#{utilBean.formatIdProblem(s.idProblem.idProblem)} - #{s.idProblem.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
-                            <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{s.idProblem.idProblem}" />
+                        <h:commandLink value="#{utilBean.formatIdProblem(s.idProblem)} - #{s.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
+                            <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{s.idProblem}" />
                         </h:commandLink>
                     </p:column>
                     <p:column headerText="#{msg['account.label.nameAccount']}" width="120">
-                        <h:commandLink value="#{s.idAccount.nickname}" action="#{problemsBean.actionRedirectViewToProfile}">
-                            <f:setPropertyActionListener target="#{problemsBean.accountView.idAccount}" value="#{s.idAccount.idAccount}" />
+                        <h:commandLink value="#{s.nickname}" action="#{problemsBean.actionRedirectViewToProfile}">
+                            <f:setPropertyActionListener target="#{problemsBean.accountView.idAccount}" value="#{s.idAccount}" />
                         </h:commandLink>
                     </p:column>
                     <p:column headerText="#{msg['submit.label.nameStatus']}" styleClass="bold-font" width="150">
                         <h:outputText value="#{s.statusSubmit}" />
                     </p:column>
                     <p:column headerText="#{msg['submit.label.nameLanguag']}" width="60">
-                        <h:outputText value="#{s.idLanguage.nameLanguage}" />
+                        <h:outputText value="#{s.nameLanguage}" />
                     </p:column>
                     <p:column headerText="#{msg['submit.label.dateSubmit']}" width="120">
                         <h:outputText value="#{s.dateSubmit}" >
@@ -80,6 +73,11 @@
                                        action="#{problemsBean.actionViewCode(s.idSubmit)}" update=":form-dlg-view-code"/>
                     </p:column>
                 </p:dataTable>
+                <p:remoteCommand id="push-board"
+                                 name="push-board" 
+                                 process="@this"  
+                                 update="table-submit-live"
+                                 actionListener="#{submitBean.actionAjaxRefreshBoard}" />
             </h:form>
 
             <h:form id="form-dlg-view-code">
@@ -93,29 +91,31 @@
                                              style="width: 90% !important; cursor: pointer !important;" />
                         </div>
                     </div>
+                    <script>
+                        var editor = CodeMirror.fromTextArea(document.getElementById("form-dlg-view-code:text-area-view-code"), {
+                            lineNumbers: false,
+                            mode: "text/x-java",
+                            keyMap: "emacs",
+                            styleActiveLine: true,
+                            matchBrackets: true,
+                            readOnly: true
+                        });
+                        //var theme = 'xq-light';
+                        //editor.setOption("theme", theme);
+                    </script>
                 </p:dialog>
-                <script>
-                    var editor = CodeMirror.fromTextArea(document.getElementById("form-dlg-view-code:text-area-view-code"), {
-                        lineNumbers: false,
-                        mode: "text/x-java",
-                        keyMap: "emacs",
-                        styleActiveLine: true,
-                        matchBrackets: true,
-                        readOnly: true
-                    });
-                    //var theme = 'xq-light';
-                    //editor.setOption("theme", theme);
-                </script>
-
             </h:form>
 
         </div>
 
-        <p:socket onMessage="handleMessage" channel="/notify" />
+        <p:socket onMessage="handleMessage"      channel="/notifyBoardLive" />
 
         <script type="text/javascript">
             function handleMessage(facesmessage) {
-                facesmessage.severity = 'info';
+                console.log(object);
+
+                var facesmessage;
+                facesmessage.severity = 'INFO';
 
                 PF('growl').show([facesmessage]);
             }
